# projet-plateforme-logistique

./: CMakeLists.txt  README.md  main.cpp
include/: Client.h  Commande.h  Convoyeur.h  Entrepot.h  Manutention.h  Plateforme.h  Produit.h  Quai.h  Region.h  Simulation.h  Stockage.h  Transporteur.h
src/: Manutention.cpp  Plateforme.cpp  Region.cpp  Simulation.cpp  Transporteur.cpp
